force-app/main/default/objects/e_Product_API__c/e_Product_API__c.object-meta.xml
<CustomObject>
    <label>e Product</label>
    <nameField>
        <label>e Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>