force-app/main/default/objects/e_Product_API__c/fields/Available_API__c.field-meta.xml
<CustomField>
    <fullName>Available_API__c</fullName>
    <label>Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>