force-app/main/default/objects/e_Product_API__c/fields/Order_id__c.field-meta.xml
<CustomField>
    <fullName>Order_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>e Order</label>
    <referenceTo>e_Order_API__c</referenceTo>
    <relationshipLabel>e Products</relationshipLabel>
    <relationshipName>e_Products</relationshipName>
    <type>Lookup</type>
</CustomField>