force-app/main/default/objects/e_Product_API__c/fields/Price_API__c.field-meta.xml
<CustomField>
    <fullName>Price_API__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>