force-app/main/default/objects/e_Product_API__c/fields/Type_API__c.field-meta.xml
<CustomField>
    <fullName>Type_API__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>